test/sema/typeck/module/path-in-type-unknown-in-module.dora
fn f(): foo::bar::Foo { 1i32 }
mod foo {}

//====================
// error: module `foo` does not contain identifier `bar`.
// --> path-in-type-unknown-in-module.dora:1:14
//  | fn f(): foo::bar::Foo { 1i32 }
//                 ~~~
//  | mod foo {}
//  | 
// 1 error found.
